# lastpass-rs

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  release-please-config.json
.cargo/: config.toml
.github/workflows/: ci.yml  publish-release.yml  release-please.yml
docs/: security-review-2026-03-25.md
docs/tasks/: 01-foundation-alias-env-option-parsing.md  02-blob-sync-and-shares-data-model.md  03-show-command-parity.md  04-generate-command-parity.md  05-sync-import-export-parity.md  06-passwd-command-parity.md  07-share-command-parity.md  08-env-prompt-clipboard-logging-parity.md  09-parity-tests-and-gates.md  10-shared-folder-move-parity.md  11-strict-option-parsing-and-color-output-parity.md  12-remove-test-mode-business-branches.md  README.md
scripts/: normalize_lcov_totals.py  run-upstream-shell-tests.sh
src/: agent.rs  blob.rs  cli.rs  config.rs  crypto.rs  crypto_tests.rs  editor.rs  editor_tests.rs  error.rs  format.rs  http.rs  http_tests.rs  kdf.rs  lib.rs  logging.rs  logging_tests.rs  lpenv.rs  main.rs  main_tests.rs  notes.rs  password.rs  password_tests.rs  session.rs  share.rs  terminal.rs  upload_queue.rs  util.rs  version.rs  xml.rs  xml_tests.rs
src/commands/: add.rs  argparse.rs  clipboard.rs  (+19 more)
tests/: add_edit_parity.rs  agent_coverage.rs  cli_help.rs  cli_integration.rs  cli_option_color_parity.rs  command_coverage.rs  logout_compat.rs  logout_prompt.rs  ls_auth.rs  mv_parity.rs  parity_coverage.rs  password_prompt.rs  password_public.rs  share_integration.rs  show_compat.rs  task06_public_coverage.rs
(+4 files in other folders)
