[package]
name = "lastpass-cli"
version = "0.0.0-dev"
edition = "2024"
license = "GPL-2.0-or-later"

[[bin]]
name = "lpass"
path = "src/main.rs"

[lib]
name = "lpass_core"
path = "src/lib.rs"

[dependencies]
aes = "0.8"
base64 = "0.22"
brotli = "6"
cbc = "0.1"
cipher = "0.4"
ecb = "0.1"
filetime = "0.2"
flate2 = "1"
hex = "0.4"
hmac = "0.12"
pbkdf2 = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "local-offset"] }
zeroize = "1.7"
nix = { version = "0.29", features = ["process", "socket", "user"] }

[dev-dependencies]
